# bookwith

./: .gitignore  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  PODCAST_UI_UX_IMPLEMENTATION_PLAN.md  README.md  README_JA.md  README_ZH.md  REFACTORING_PLAN.md  bookwith.code-workspace  epub-citation-implementation-summary.md  epub-citation-spec.md  eslint.config.js  loading-component-design.md  loading-component-refactor-plan.md  mypy.ini  package.json  pnpm-lock.yaml  prettier.config.cjs  pyproject.toml  turbo.json
apps/api/: .gitignore  .ruff.toml  Makefile  README.md  docker-compose.yml  index_tenant_mapping.json  package.json  pyproject.toml
apps/api/config/: .env.example  app_config.py
apps/api/src/: db.py  main.py  prompts.py  utils.py  vector.py
apps/api/src/api/: __init__.py  routes.py
apps/api/src/api/endpoints/: __init__.py  auth.py  book.py  chat.py  llm.py  rag.py  root.py
apps/api/src/application/: error_handlers.py
apps/api/src/application/schemas/: base.py
apps/api/src/application/services/: __init__.py  auth_service.py  book_service.py  llm_service.py
apps/api/src/application/utils/: __init__.py
apps/api/src/config/: .env.example  __init__.py  app_config.py  seed.py  settings.py
apps/api/src/domain/annotation/: exceptions.py
apps/api/src/domain/annotation/entities/: annotation.py
apps/api/src/domain/annotation/exceptions/: __init__.py  annotation_exceptions.py
apps/api/src/domain/annotation/repositories/: annotation_repository.py
apps/api/src/domain/annotation/value_objects/: __init__.py  annotation_cfi.py  annotation_color.py  annotation_id.py  annotation_notes.py  annotation_text.py  annotation_type.py
apps/api/src/domain/book/: __init__.py
apps/api/src/domain/book/entities/: __init__.py  book.py
apps/api/src/domain/book/exceptions/: __init__.py  book_exceptions.py
apps/api/src/domain/book/repositories/: __init__.py  book_repository.py
apps/api/src/domain/book/value_objects/: __init__.py  book_description.py  book_id.py  book_metadata.py  book_status.py  book_title.py  tennant_id.py
apps/api/src/domain/chat/entities/: chat.py
apps/api/src/domain/chat/exceptions/: chat_exceptions.py
apps/api/src/domain/chat/repositories/: chat_repository.py
apps/api/src/domain/chat/value_objects/: book_id.py  chat_id.py  chat_title.py  user_id.py
apps/api/src/domain/message/: __init__.py
apps/api/src/domain/message/entities/: __init__.py  message.py
apps/api/src/domain/message/exceptions/: __init__.py  message_exceptions.py
apps/api/src/domain/message/repositories/: __init__.py  message_repository.py
apps/api/src/domain/message/value_objects/: __init__.py  message_content.py  message_id.py  sender_type.py
apps/api/src/domain/podcast/entities/: podcast.py
apps/api/src/domain/podcast/exceptions/: __init__.py  podcast_exceptions.py
apps/api/src/domain/podcast/repositories/: podcast_repository.py
apps/api/src/domain/podcast/services/: __init__.py  (+2 more)
apps/api/src/infrastructure/: vector.py
apps/api/src/infrastructure/database/: models.py
apps/api/src/infrastructure/di/: __init__.py  injection.py
apps/api/src/infrastructure/memory/: __init__.py  base_vector_store.py  book_annotation_store.py  book_content_store.py  chat_memory_store.py  collection_manager.py  memory_prompt.py  memory_retrieval_service.py  memory_service.py  memory_tasks.py  memory_vector_store.py  prompt_builder_service.py  retry_decorator.py  summarization_service.py  vector_crud_service.py  vectorization_service.py
apps/api/src/infrastructure/postgres/: __init__.py  db_util.py
apps/api/src/models/: __init__.py  database.py  schemas.py
apps/api/src/presentation/api/: __init__.py  routes.py
apps/api/src/services/: __init__.py  auth_service.py  book_service.py  llm_service.py  rag_service.py
apps/api/src/usecase/annotation/: __init__.py  create_annotation_usecase.py  delete_annotation_usecase.py  find_annotation_by_id_usecase.py  find_annotations_usecase.py  update_annotation_use_case.py  update_annotation_usecase.py
apps/api/src/usecase/book/: __init__.py  create_book_usecase.py  create_book_vector_index_usecase.py  delete_book_usecase.py  find_book_by_id_usecase.py  find_books_usecase.py  update_book_usecase.py
apps/api/src/usecase/chat/: __init__.py  create_chat_usecase.py  delete_chat_usecase.py  find_chat_by_id_usecase.py  find_chats_by_user_id_and_book_id_usecase.py  find_chats_by_user_id_usecase.py  update_chat_title_usecase.py
apps/api/src/usecase/message/: __init__.py  ai_response_generator.py  chat_manager.py  citation_parser.py  create_message_usecase.py  delete_message_usecase.py  find_message_by_id_usecase.py  find_messages_usecase.py  highlight_searcher.py  message_processor.py
apps/api/src/usecase/podcast/: create_podcast_usecase.py  decorators.py  extract_chapters_usecase.py  find_podcast_by_id_usecase.py  find_podcasts_by_book_id_usecase.py  generate_podcast_usecase.py  generate_script_usecase.py  get_podcast_status_usecase.py  podcast_config.py  summarize_chapters_usecase.py  synthesize_audio_usecase.py
apps/api/src/usecase/services/: __init__.py  llm_service.py  rag_service.py
apps/api/src/utils/: __init__.py  error_handlers.py  helpers.py  tenant_utils.py
apps/fastapi-app/: pyproject.toml
apps/fastapi-app/config/: .env.test  app_config.py
(+257 files in other folders)
