[tool.poetry]
name = "bookwith-monorepo"
version = "0.1.0"
description = "Monorepo for bookwith project"
authors = []

[tool.poetry.dependencies]
python = ">=3.11,<4.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api" 
