[project]
name = "fastapi-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dropbox>=12.0.2",
    "fastapi>=0.115.12",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-openai>=0.3.12",
    "langchain-text-splitters>=0.3.8",
    "mypy>=1.15.0",
    "pydantic>=2.11.2",
]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
fastapi = {version = ">=0.115.12", python = ">=3.13,<4.0"}
langchain = {version = ">=0.3.23", python = ">=3.13,<4.0"}
langchain-community = {version = ">=0.3.21", python = ">=3.13,<4.0"}
langchain-openai = {version = ">=0.3.12", python = ">=3.13,<4.0"}
langchain-text-splitters = {version = ">=0.3.8", python = ">=3.13,<4.0"}
pydantic = {version = ">=2.11.2", python = ">=3.13,<4.0"}

[tool.mypy]
mypy_path = "."
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
ignore_missing_imports = true
strict_optional = true
check_untyped_defs = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
exclude = 'seed.py'
